# Qt-doc-viewer-proto

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: event_overlay_widget.h  main_window.h  pdf_viewer_widget.h  websocket_server.h
source/: event_overlay_widget.cpp  main_window.cpp  pdf_viewer_widget.cpp
ui/: main_window.ui
